<?xml version="1.0"?>
<package format="2">
    <name>nav_gym</name>
    <version>1.0.0</version>
    <description>nav_gym_simulator package</description>
    <maintainer email="leekwoon@todo.todo">leekwoon</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>pedsim_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>pedsim_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>message_generation</exec_depend>

    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>